# qt_kursovik

./: .gitmodules  CMakeLists.txt  README.md
src/: gl_widget.cpp  gl_widget.h  libvector.h  main_window.cpp  main_window.h  model.cpp  model.h  overlay_widget.cpp  overlay_widget.h  parameter_selector.cpp  parameter_selector.h  sketch_widget.cpp  sketch_widget.h  stl_serializer.cpp  stl_serializer.h
src/tools/: clickabletreewidget.cpp  clickabletreewidget.h  qdoubleSlider.cpp  qdoubleSlider.h  viewmodeswitch.cpp  viewmodeswitch.h
